tests/baselines/reference/genericConstraint2.errors.txt
tests/cases/compiler/genericConstraint2.ts(11,7): error TS2420: Class 'ComparableString' incorrectly implements interface 'Comparable<string>'.
  Property 'comparer' is missing in type 'ComparableString' but present in type 'Comparable<string>'.
tests/cases/compiler/genericConstraint2.ts(21,17): error TS2737: Property 'comparer' is missing in type 'ComparableString' but present in type 'Comparable<ComparableString>'.


==== tests/cases/compiler/genericConstraint2.ts (2 errors) ====
    interface Comparable<T> {
        comparer(other: T): number;
    }
    
    function compare<T extends Comparable<T>>(x: T, y: T): number {
        if (x == null) return y == null ? 0 : -1;
        if (y == null) return 1;
        return x.comparer(y);
    }
    
    class ComparableString implements Comparable<string>{
          ~~~~~~~~~~~~~~~~
!!! error TS2420: Class 'ComparableString' incorrectly implements interface 'Comparable<string>'.
!!! error TS2420:   Property 'comparer' is missing in type 'ComparableString' but present in type 'Comparable<string>'.
        constructor(public currentValue: string) { }
    
        localeCompare(other) {
            return 0;
        }
    }
    
    var a = new ComparableString("a");
    var b = new ComparableString("b");
    var c = compare<ComparableString>(a, b);
                    ~~~~~~~~~~~~~~~~
!!! error TS2737: Property 'comparer' is missing in type 'ComparableString' but present in type 'Comparable<ComparableString>'.